Change X-Real-IP header to use remote address
Updated the X-Real-IP header to use the remote address instead of CF-Connecting-IP.

--- a/nginx/server/default.conf
+++ b/nginx/server/default.conf
@@ -12,8 +12,8 @@ server {
 
         set $config_name "default";
 
-        # 核心：将CF-Connecting-IP重写为X-Real-IP
-        proxy_set_header X-Real-IP $http_cf_connecting_ip;
+        # 核心：获取外围链接源IP
+        proxy_set_header X-Real-IP $remote_addr;
             
         # 标准代理头设置
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
